--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Lato:wght@100;300;400;700&family=Montserrat:wght@900&family=Open+Sans:wght@400;600;700;800&family=Outfit:wght@300;400;600&family=Red+Hat+Display:wght@500;700;900&family=Roboto:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link rel="stylesheet" href="style.css" />
 
 		<title>Frontend Mentor | Order summary card</title>
 
@@ -21,21 +27,24 @@
 			<picture class="card__image">
 				<img src="/images/illustration-hero.svg" alt="pessoa ouvindo musica" />
 			</picture>
-			<h1 class="card__title">Order Summary</h1>
-			<p class="card__description">
-				You can now listen to millions of songs, audiobooks, and podcasts on any
-				device anywhere you like! Annual Plan $59.99/year Change Proceed to
-				Payment Cancel Order
-			</p>
-			<div class="card__inner">
-				<picture class="card__inner-image">
-					<img src="/images/icon-music.svg" alt="Icone de musica" />
-				</picture>
-				<div class="card__inner-plan">
-					<h2 class="card__inner-title">AnnualPlan</h2>
-					<p class="card__inner-price">$59.99/year</p>
+			<div class="card__content">
+				<h1 class="card__title">Order Summary</h1>
+				<p class="card__description">
+					You can now listen to millions of songs, audiobooks, and podcasts on
+					any device anywhere you like!
+				</p>
+				<div class="card__inner">
+					<picture class="card__inner-image">
+						<img src="/images/icon-music.svg" alt="Icone de musica" />
+					</picture>
+					<div class="card__inner-plan">
+						<h2 class="card__inner-title">Annual Plan</h2>
+						<p class="card__inner-price">$59.99/year</p>
+					</div>
+					<a href="#" class="card__inner-link">Change</a>
 				</div>
-				<a href="#">Change</a>
+				<button class="btn btn--primary">Proceed to Payment</button>
+				<a href="#" class="card__order">Cancel Order</a>
 			</div>
 		</div>
 	</body>
